1999-08-15  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* common-src/Makefile.am (genversion.o): Depend on genversion.c
	too.  It seems that IRIX's make doesn't work without it.
	Reported by Brian Cuttler <brian@wadsworth.org>

1999-08-15  Jon LaBadie  <jon@jgcomp.com>
	
	* tape-src/tapetype.c: Speed it up by using larger sections in the
	second pass.

1999-08-15  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* man/amanda.8.in (skip-full, incronly): Document existing bugs.

	* server-src/conffile.c (init_defaults): Default disksize to 0.
	* man/amanda.8.in (holdingdisk use): Document it.
	Reported by Grant Beattie <Grant.Beattie@fulcrum.com.au>

	* server-src/planner.c (setup_estimate): Typo.
	(next_level0): Typo.

	* config/ltconfig, config/ltmain.sh: Update from libtool 1.3.3.

	* example/amanda.conf.in: Clarify holdingdisk::use 0.

	* config/missing: Update from automake 1.4a.

1999-07-04 Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* man/amanda.8.in: typo.

1999-06-29  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* man/amrestore.8: Document holding-file usage.

1999-06-25  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* Makefile.am (pkgdata_DATA): Install COPYRIGHTs.
	(EXTRA_DIST): Remove docs/*.
	* docs/Makefile.am: New file.
	(pkgdata_DATA): Install all docs.
	* configure.in: Output docs/Makefile.
	Suggested by Paul L. Lussier <plussier@baynetworks.com>

	* docs/FAQ (selfcheck time-out): NIS services, inetd rebooting,
	keyboard time-out, lsof.

	* server-src/amverify.sh.in (HEADER): Use `sed 1q'  instead of the
	not-that-portable `head -1'.
	Reported by Andrew Lare <lare@eos913c.gsfc.nasa.gov>

1999-06-19  Alexander Zangerl  <az@Austria.EU.net>

	* client-src/sendbackup-dump.c (re_table): Match Solaris vxdump
	output.

1999-06-18 Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/dumper.c (read_indexfd): typo

1999-06-18 Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/dumper.c (do_dump): Close the indexout fh and wait